spacing between field title and dropdown field issue

--- a/src/assets/css/precisemri-theme.css
+++ b/src/assets/css/precisemri-theme.css
@@ -7103,3 +7103,9 @@ select {
 
 	.modal{overflow: auto;}
 
+
+	.ms-lf-col{padding-left: 30px;}
+	@media (max-width: 990px) {
+		.ms-lf-col{padding-left: 10px!important;}
+		
+	}
